# Farcaster

./: .gitignore  .gitmodules  CMakeLists.txt
shaders/: triangle.slang
src/: main.c
